[package]
name = "ngit"
version = "1.0.0"
edition = "2021"
description = "cli for code collaboration over nostr"
authors = ["DanConwayDev <DanConwayDev@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/CodeCollaborationNostr/ngit"
repository = "https://github.com/CodeCollaborationNostr/ngit"
license = "MIT"
keywords = ["nostr", "git"]
categories = ["command-line-utilities","git"]

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
confy = "0.5.1"
dialoguer = "0.10.4"
serde = { version = "1.0.181", features = ["derive"] }
